# Soccer

./: CMakeLists.txt  README.md  Scramble.xctestplan  Soccer.cpp  Soccer.hpp  Soccer_Arx.cpp  Soccer_Arx.hpp  _practrand_report.txt  build.sh  secure.test.encrypted
Army.xcodeproj/: project.pbxproj
Code Review Broken Down/: Antares_FullyBroken.cpp  Body_Study_NoSquash.cpp  Body_Study_OnlySquash.cpp  Residual_Study_KDF_A_B.cpp  Residual_Study_Seed.cpp  Residual_Study_Twist.cpp
Code Review Broken Down/Stripped_Twisters/: TwistExpander_Achernar.cpp  TwistExpander_Achernar_Arx.cpp  TwistExpander_Antares.hpp  TwistExpander_Antares_Arx.cpp  TwistExpander_Antares_Arx.hpp  TwistExpander_Regulus.cpp  TwistExpander_Regulus_Arx.cpp  TwistExpander_Vega_Arx.cpp  TwistExpander_Vega_Arx.hpp
Gen Code/: GSeedRunKDF_A.cpp  GSeedRunKDF_B.cpp  GSeedRunSeed.cpp  GTwistRunGrowKeyA.cpp  GTwistRunTwist.cpp
Scramble/: AppDelegate.h  AppDelegate.mm  Avalancher.cpp  FileIO.cpp  Rig.cpp  Rig.hpp  main.m
Scramble.xcodeproj/: project.pbxproj
Scramble.xcodeproj/xcshareddata/xcschemes/: Scramble.xcscheme
Scramble/Base.lproj/: MainMenu.xib
Scramble/Composer/: Soccer.cpp  Soccer.hpp
Scramble/Encrypter/: CipherErrorCodes.hpp  Crypt.hpp  EncryptionLayer.cpp  EncryptionLayer.hpp  Jelly.hpp  LayeredCrypt.cpp  LayeredCrypt.hpp  MaskLibrary.cpp  MaskLibrary.hpp
Scramble/Expander/Core/: M88.cpp  TwistDiffuse.cpp  TwistDiffuse.hpp  TwistExpander.cpp  TwistExpander.hpp  (+10 more)
ScrambleTests/: ExpanderFactory.hpp  FoldGrowATests.mm  FoldGrowBTests.mm  FoldInvestTests.mm  LaneTool.cpp  LaneTool.hpp  NonceAvalancheTests.mm  PasswordAvalancheTests.mm  RandomRotationTests.mm  RepeatActionTest.mm  ScrambleTests.mm  WorkSpaceTools.hpp
Soccer/: AppDelegate.h  AppDelegate.mm  Avalancher.cpp  Avalancher.hpp  FileIO.cpp  FileIO.hpp  Random.cpp  Random.hpp  Rig.cpp  main.m
Soccer/Base.lproj/: MainMenu.xib
cmake/: SoccerConfig.cmake.in
matrix/: M88QuadSelectsA.hpp  M88QuadSelectsC.hpp
run/: Rig.hpp
twist/: TwistCryptoScoring.cpp  TwistCryptoScoring.hpp  TwistDiffuse.hpp  TwistExpander.hpp  TwistFarmConstants.cpp  TwistFarmConstants.hpp  TwistIndexShuffle.hpp  TwistShiftBox.cpp  TwistSnow.hpp  TwistSquash.cpp  TwistSquash.hpp  TwistWorkSpace.cpp  TwistWorkSpace.hpp
twisters_original_locked/: TwistExpander_Achernar.hpp  TwistExpander_Achernar_Arx.cpp  TwistExpander_Achernar_Arx.hpp  TwistExpander_Alcor.hpp  TwistExpander_Alcor_Arx.cpp  TwistExpander_Alcor_Arx.hpp  TwistExpander_Aldebaran_Arx.hpp  TwistExpander_Alioth.cpp  TwistExpander_Alioth_Arx.cpp  TwistExpander_Alkaid.hpp  TwistExpander_Alkaid_Arx.cpp  TwistExpander_Alkaid_Arx.hpp  TwistExpander_Alnitak_Arx.cpp  TwistExpander_Altair.cpp  TwistExpander_Altair_Arx.cpp  TwistExpander_Ankaa.hpp  TwistExpander_Ankaa_Arx.cpp  TwistExpander_Antares.cpp  TwistExpander_Arcturus.cpp  TwistExpander_Arcturus_Arx.cpp  TwistExpander_Athebyne.cpp  TwistExpander_Athebyne_Arx.cpp  TwistExpander_Athebyne_Arx.hpp  TwistExpander_Bellatrix.cpp  TwistExpander_Bellatrix.hpp  TwistExpander_Bellatrix_Arx.cpp  TwistExpander_Bellatrix_Arx.hpp  TwistExpander_Betelgeuse_Arx.cpp  TwistExpander_Canopus.cpp  TwistExpander_Canopus.hpp  TwistExpander_Canopus_Arx.hpp  TwistExpander_Capella.cpp  TwistExpander_Capella_Arx.cpp  TwistExpander_Castor.cpp  TwistExpander_Castor_Arx.cpp  TwistExpander_Gemma.cpp  TwistExpander_Gemma.hpp  TwistExpander_Mebsuta.cpp  TwistExpander_Mebsuta.hpp  TwistExpander_Mebsuta_Arx.cpp  (+23 more)
(+230 files in other folders)
